# tripleytz

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  TODO
src/: ace.xpm  config.cpp  config.h  dice.h  five.xpm  four.xpm  gamescorer.h  highscoresdialog.cpp  highscoresdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  score.h  scorecolumn.h  scorerow.h  six.xpm  three.xpm  two.xpm
